@@ -1,11 +1,9 @@
 Some major TODO:
-* Create proxy class, that will take care of the rapi connection
-  because this should not be in the GUI classes
- 
-* Have some error handling, instead of just trying to access the 
-  device if it is not connected, resulting in a segfault
- 
+
 * Implement install Cab file
 
 * Implement connection with liborange, such that any installer can be 
   installed through the program.
+
+* Display more info about the phone when connected. Should be quite easy
+  to implement this.
